<resources>
    <string name="app_name">MADLABEXAM</string>
    <string name="Addtxt">ADD A STUDENT</string>
    <string name="edtNumber">Enter It Number</string>
    <string name="edtName">Enter The Name</string>
    <string name="edtEmail">Enter The Email\n</string>
    <string name="edtPassword">Enter The Password</string>
    <string name="btnAdd">Add Student</string>
    <string name="edtView">View Student</string>
    <string name="stdDetail">Student Detail</string>
    <string name="btnHome">Home</string>
    <string name="btnPG">post graduate</string>
    <string name="btnUG">under graduate</string>
    <string name="btnUpdate">update</string>
    <string name="updateTxt">Update A STUDENT</string>
    <string-array name="Degree">
        <item></item>
        <item>UG</item>
        <item>PG</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnUser">user Login</string>
    <string name="btnAdmin">Admin login</string>
    <string name="btnLogin">Login</string>
    <string name="btnLogout">Log out</string>

</resources>